@@ -1,5 +1,9 @@
 2005-06-21  Mark McLoughlin  <markmc@redhat.com>
 
+	* sabayon.spec.in: update %files
+
+2005-06-21  Mark McLoughlin  <markmc@redhat.com>
+
 	Move the monitoring window out into the session
 	window itself. Things still look a bit funny; more
 	work needed.
